tests/backend/checkmach/fail14.output
File "fail14.ml", line 6, characters 5-15:
Error: Annotation check for zero_alloc strict failed on function Fail14.foo (camlFail14__foo_HIDE_STAMP)
